stick footer to bottom

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 
 </body>
-<footer class="navbar-default navbar-fixed-bottom">
+<footer>
     <div class="footer-bottom" id="bsr-page-footer">
         
       <div class="row">
