--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,23 +1,22 @@
 body {
   padding-top: 75px;
-  padding-bottom: 200px;
 }
 
 footer {
   background-color: whitesmoke;
-  position: fixed;
-  left: 0;
-  bottom: 0;
+  position: relative;
+  bottom: 100;
   width: 100%;
+  height: 200px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
 }
 
 .navbar {
   background-color: whitesmoke;
-  margin-bottom: 20px;
 }
 
 #bsr-page-footer {
-  padding: 3rem 2rem 1rem;
+  padding: 1rem 1rem 1rem;
 }
 
 hr {
