improve responsive look

--- a/views/partials/goods.ejs
+++ b/views/partials/goods.ejs
@@ -1,5 +1,5 @@
 <form action="/" method="POST">
-    <div class="col-md-4">
+    <div class="col-md-4 col-xs-6">
         <div class="thumbnail">
           <img src="<%=goodsImage%>" alt="" class="img-responsive">
           <div class="caption">
