change how usernum operate

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -46,7 +46,7 @@
               placeholder="Username"
               aria-describedby="button-addon2"
               
-              value="000<%=userNum%>"
+              value="<%=userNum%>"
               
               required 
               autofocus
