--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -66,7 +66,7 @@
               <ul class="nav navbar-nav navbar-right">
                 <!-- <li class="active"><a href="./">Cart <span class="sr-only"></span></a></li> -->
 
-                <%if(isLogin){%>
+                <%if(isLogin&&wallet){%>
                   <li>
                     <a href="/user"
                       >User <span class="sr-only"></span
