--- a/views/user.ejs
+++ b/views/user.ejs
@@ -48,7 +48,7 @@
 <div class="row" style="text-align: center">
   <%Child.forEach((element)=>{%>
     <%if(element.child==2){%>
-      <div class="col-sm-1"  style="width: 12.499999995%">
+      <div class="col-xs-1"  style="width: 12.499999995%">
         <a href="/user/<%=element._id%>">
           <i class="fa-solid fa-user fa-4x" style="color: purple"></i>
           <p style="font-size: 30px"><%=element.username%></p>
