--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,7 +1,7 @@
 <%-include("partials/header.ejs")-%>
 
 <div class="alert alert-warning">
-  This page is unfinish! ลำดับของลูกหลานไม่ตรงกับพ่อแม่
+  This page is unfinish! ล้นแถวเมื่อเปิดบนจอเล็ก
 </div>
 
 <div class="row" style="text-align: center">
@@ -14,55 +14,55 @@
 </div>
 
 <div class="row" style="text-align: center">
-  <%Child.forEach((element)=>{%> <%if(element.child==0){%>
+  <%Child.forEach((element)=>{%> <%if(element.tree.child==0){%>
   <div class="col-xs-6">
-    <a href="/user/<%=element._id%>">
+    <a href="/user/<%=element.tree._id%>">
       <i class="fa-solid fa-user fa-6x" style="color: blue"></i>
-      <p style="font-size: 30px"><%=element.username%></p>
+      <p style="font-size: 30px"><%=element.tree.username%></p>
     </a>
   </div>
   <%}%> <%})%>
 </div>
 
 <div class="row" style="text-align: center">
-  <%Child.forEach((element)=>{%> <%if(element.child==1){%>
+  <%Child.forEach((element)=>{%> <%if(element.tree.child==1){%>
   <div class="col-xs-3">
-    <a href="/user/<%=element._id%>">
+    <a href="/user/<%=element.tree._id%>">
       <i class="fa-solid fa-user fa-5x" style="color: darkgreen"></i>
-      <p style="font-size: 30px"><%=element.username%></p>
+      <p style="font-size: 30px"><%=element.tree.username%></p>
     </a>
   </div>
   <%}%> <%})%>
 </div>
 
 <div class="row" style="text-align: center">
-  <%Child.forEach((element)=>{%> <%if(element.child==2){%>
+  <%Child.forEach((element)=>{%> <%if(element.tree.child==2){%>
   <div class="col-xs-1" style="width: 12.499999995%">
-    <a href="/user/<%=element._id%>">
+    <a href="/user/<%=element.tree._id%>">
       <i class="fa-solid fa-user fa-4x" style="color: purple"></i>
-      <p style="font-size: 20px"><%=element.username%></p>
+      <p style="font-size: 20px"><%=element.tree.username%></p>
     </a>
   </div>
   <%}%> <%})%>
 </div>
 
 <div class="row" style="text-align: center">
-  <%Child.forEach((element)=>{%> <%if(element.child==3){%>
+  <%Child.forEach((element)=>{%> <%if(element.tree.child==3){%>
   <div class="col-xs-1" style="width: 6.2499999975%">
-    <a href="/user/<%=element._id%>">
-      <i class="fa-solid fa-user fa-2x" style="color: palevioletred"></i>
-      <p style="font-size: 12px"><%=element.username%></p>
+    <a href="/user/<%=element.tree._id%>">
+      <i class="fa-solid fa-user fa-3x" style="color: palevioletred"></i>
+      <p style="font-size: 12px"><%=element.tree.username%></p>
     </a>
   </div>
   <%}%> <%})%>
 </div>
 
 <div class="row" style="text-align: center">
-  <%Child.forEach((element)=>{%> <%if(element.child==4){%>
+  <%Child.forEach((element)=>{%> <%if(element.tree.child==4){%>
   <div class="col-xs-1" style="width: 3.1249999988%">
-    <a href="/user/<%=element._id%>">
+    <a href="/user/<%=element.tree._id%>">
       <i class="fa-solid fa-user fa-2x" style="color: grey"></i>
-      <p style="font-size: 10px"><%=element.username%></p>
+      <p style="font-size: 10px"><%=element.tree.username%></p>
     </a>
   </div>
   <%}%> <%})%>
