remove unnesscessary code

--- a/views/money.ejs
+++ b/views/money.ejs
@@ -2,7 +2,7 @@
 <div class="container">
       
 
-    <div class="jumbotron"><h1 style=""><%=wallet.money%> บาท<h1 style=""><hr style=""><%=wallet.point%> point</h1></h1>
+    <div class="jumbotron"><h1><%=wallet.money%> บาท<h1><hr><%=wallet.point%> point</h1></h1>
       
       
 
