--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,12 +1,12 @@
 
 </body>
-<footer>
+<footer class="navbar-default navbar-fixed-bottom">
     <div class="footer-bottom" id="bsr-page-footer">
         
       <div class="row">
           <!-- brand bar -->
           <div class="col-xs-6 text-left">
-            <img id="bsr-brand-image" src="/images/icon.png" alt="brand icon" width="35" height="35"> <a href="/">  Paul Demo</a>
+            <a href="/"><img src="/images/logo1.png" style="height: auto; width: 100px;"></a>
           </div>
           <!-- social icons -->
           <div class="col-xs-6 text-right">
@@ -22,11 +22,11 @@
       
         <div class="row">
           <!-- copyright bar -->
-          <div class="col-xs-6">
-            <p><small>Copyright © 2023 Paulo</small></p>
+          <div class="col-xs-5">
+            <p><small>Copyright © 2023</small></p>
           </div>
           <!-- ancillary links bar -->
-          <div class="col-xs-6">
+          <div class="col-xs-7">
             <ul class="bsr-footer-ancillary-links text-right">
               <li><a href="/">Home</a></li>
               <li><a href="/user">User</a></li>
