--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,13 +7,13 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <link rel="icon" href="/images/icon.png" />
+    <link rel="icon" href="/images/logo1.png" />
     <link
       rel="canonical"
       href="https://getbootstrap.com/docs/3.3/examples/navbar-fixed-top/"
     />
 
-    <title>E-Commerce Demo Site</title>
+    <title>ไลฟ์ก้าวหน้า</title>
 
     <!-- Bootstrap core CSS -->
     <link
@@ -53,7 +53,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="/">Paul Demo</a>
+              <a href="/"><img src="/images/logo1.png" style="height: auto; width: 100px; padding-left: 15px;"></a>
             </div>
 
             <div id="navbar" class="navbar-collapse collapse">
@@ -68,17 +68,17 @@
                   </li>
                 <li>
                   <a href="/money"
-                    ><%=wallet.money%> บาท <span class="sr-only"></span
+                    ><span class="badge"><%=wallet.money%></span> บาท <span class="sr-only"></span
                   ></a>
                 </li>
                 <li>
                   <a href="/money"
-                    ><%=wallet.point%> point <span class="sr-only"></span
+                    ><span class="badge"><%=wallet.point%></span> point <span class="sr-only"></span
                   ></a>
                 </li=>
                 <li>
                   <a href="/cart"
-                    >Cart ( <%=wallet.total%> บาท ) <span class="sr-only"></span
+                    >Cart ( <span class="badge"><%=wallet.total%></span> บาท ) <span class="sr-only"></span
                   ></a>
                 </li>
                 <li>
@@ -96,8 +96,10 @@
             </div>
           </div>
         </nav>
+        
       </div>
       <!-- Fixed navbar -->
     </form>
+    
   </body>
 </html>
