--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,5 +1,15 @@
 <%-include("partials/header.ejs")-%>
 
+
+
+<h3 style="color: black; margin-left: 75px;">วันที่</h3>
+<div class="panel panel-default daybox">
+  
+  <div class="panel-body">
+    <%=day%>
+  </div>
+</div>
+
 <div class="alert alert-warning">
   This page is unfinish! ล้นแถวเมื่อเปิดบนจอเล็ก
 </div>
@@ -7,7 +17,7 @@
 <div class="row" style="text-align: center">
   <div class="col-md-12">
     <a href="/user/<%=userName._id%>/sponsor">
-      <i class="fa-solid fa-user fa-7x" style="color: red"></i>
+      <i class="fa-solid fa-person fa-7x" style="color: red"></i>
       <h1><%=userName.username%></h1>
     </a>
   </div>
@@ -17,7 +27,7 @@
   <%Child.forEach((element)=>{%> <%if(element.tree.child==0){%>
   <div class="col-xs-6">
     <a href="/user/<%=element.tree._id%>">
-      <i class="fa-solid fa-user fa-6x" style="color: blue"></i>
+      <i class="fa-solid fa-person fa-6x" style="color: blue"></i>
       <p style="font-size: 30px"><%=element.tree.username%></p>
     </a>
   </div>
@@ -28,7 +38,7 @@
   <%Child.forEach((element)=>{%> <%if(element.tree.child==1){%>
   <div class="col-xs-3">
     <a href="/user/<%=element.tree._id%>">
-      <i class="fa-solid fa-user fa-5x" style="color: darkgreen"></i>
+      <i class="fa-solid fa-person fa-5x" style="color: darkgreen"></i>
       <p style="font-size: 30px"><%=element.tree.username%></p>
     </a>
   </div>
@@ -39,7 +49,7 @@
   <%Child.forEach((element)=>{%> <%if(element.tree.child==2){%>
   <div class="col-xs-1" style="width: 12.499999995%">
     <a href="/user/<%=element.tree._id%>">
-      <i class="fa-solid fa-user fa-4x" style="color: purple"></i>
+      <i class="fa-solid fa-person fa-4x" style="color: purple"></i>
       <p style="font-size: 20px"><%=element.tree.username%></p>
     </a>
   </div>
@@ -50,7 +60,7 @@
   <%Child.forEach((element)=>{%> <%if(element.tree.child==3){%>
   <div class="col-xs-1" style="width: 6.2499999975%">
     <a href="/user/<%=element.tree._id%>">
-      <i class="fa-solid fa-user fa-3x" style="color: palevioletred"></i>
+      <i class="fa-solid fa-person fa-3x" style="color: palevioletred"></i>
       <p style="font-size: 12px"><%=element.tree.username%></p>
     </a>
   </div>
@@ -61,7 +71,7 @@
   <%Child.forEach((element)=>{%> <%if(element.tree.child==4){%>
   <div class="col-xs-1" style="width: 3.1249999988%">
     <a href="/user/<%=element.tree._id%>">
-      <i class="fa-solid fa-user fa-2x" style="color: grey"></i>
+      <i class="fa-solid fa-person fa-2x" style="color: grey"></i>
       <p style="font-size: 10px"><%=element.tree.username%></p>
     </a>
   </div>
