--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,6 +13,11 @@ footer {
   line-height: 60px; /* Vertically center the text there */
 }
 
+.flex-container {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
 .navbar {
   background-color: whitesmoke;
 }
