--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,7 +1,7 @@
 
 <%-include("partials/header.ejs")-%>
 
-<div class="container">
+<div class="container" style="padding: 25px;">
 	<table id="cart" class="table table-hover table-condensed">
     				<thead>
 						<tr>
