--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 
 
 
-<div class="container">
+<div class="container" style="padding: 25px;">
   <div class="row">
 
     <%goods.forEach((element) => { %>
