--- a/views/money.ejs
+++ b/views/money.ejs
@@ -1,5 +1,5 @@
 <%-include("partials/header.ejs")-%>
-<div class="container">
+<div class="container" style="padding: 25px;">
       
 
     <div class="jumbotron"><h1><%=wallet.money%> บาท<h1><hr><%=wallet.point%> point</h1></h1>
