--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -59,11 +59,15 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
                 <!-- <li class="active"><a href="./">Cart <span class="sr-only"></span></a></li> -->
-
+                <li>
+                  <a href="/"
+                    ><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home <span class="sr-only"></span
+                  ></a>
+                </li>
                 <%if(isLogin&&wallet){%>
                   <li>
                     <a href="/user"
-                      >User <span class="sr-only"></span
+                      ><span class="glyphicon glyphicon-user" aria-hidden="true"></span> User <span class="sr-only"></span
                     ></a>
                   </li>
                 <li>
@@ -78,7 +82,7 @@
                 </li=>
                 <li>
                   <a href="/cart"
-                    >Cart ( <span class="badge"><%=wallet.total%></span> บาท ) <span class="sr-only"></span
+                    > <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>   ( <span class="badge"><%=wallet.total%></span> บาท ) <span class="sr-only"></span
                   ></a>
                 </li>
                 <li>
