--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -64,7 +64,7 @@
                     ><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home <span class="sr-only"></span
                   ></a>
                 </li>
-                <%if(isLogin&&wallet){%>
+                <%if(isLogin){%>
                   <li>
                     <a href="/user"
                       ><span class="glyphicon glyphicon-user" aria-hidden="true"></span> User <span class="sr-only"></span
