--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -64,37 +64,15 @@
                     ><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home <span class="sr-only"></span
                   ></a>
                 </li>
-                <%if(isLogin){%>
-                  <li>
-                    <a href="/user"
-                      ><span class="glyphicon glyphicon-user" aria-hidden="true"></span> User <span class="sr-only"></span
-                    ></a>
-                  </li>
-                <li>
-                  <a href="/money"
-                    ><span class="badge"><%=wallet.money%></span> บาท <span class="sr-only"></span
-                  ></a>
-                </li>
-                <li>
-                  <a href="/money"
-                    ><span class="badge"><%=wallet.point%></span> point <span class="sr-only"></span
-                  ></a>
-                </li=>
-                <li>
-                  <a href="/cart"
-                    > <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>   ( <span class="badge"><%=wallet.total%></span> บาท ) <span class="sr-only"></span
-                  ></a>
-                </li>
-                <li>
-                  <a href="/logout">Log out<span class="sr-only"></span></a>
-                </li>
+                <%if(user){%>
+                  <%if(user.isAdmin){%>
+                    <%-include("adminbar.ejs")-%>
+                  <%}else{%>
+                    <%-include("userbar.ejs", {wallet: wallet})-%>
+                  <%}%>
+
                 <%}else{%>
-                  <li>
-                  <a href="/login">Login<span class="sr-only"></span></a>
-                </li>
-                <li>
-                  <a href="/register">Register<span class="sr-only"></span></a>
-                </li>
+                  <%-include("nonuserbar.ejs")-%>
                 <%}%>
               </ul>
             </div>
