--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="auto">
   <head>
-    <link rel="icon" href="/images/logo1.png" />
+    <link rel="icon" href="/images/icon.png" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
@@ -19,9 +19,10 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.3/css/bootstrap-select.min.css" />
-
-
+    <link
+      rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.3/css/bootstrap-select.min.css"
+    />
 
     <!-- Custom styles for this template -->
     <link href="/css/auth_style.css" rel="stylesheet" />
@@ -29,10 +30,15 @@
   <body class="text-center">
     <main class="form-signin w-100 m-auto">
       <!-- send POST request -->
-      <form action="/register" method="POST" class="needs-validation" autocomplete="off" novalidate>
-        <img src="/images/logo1.png" style="margin-left: 50px; height: auto; width: 250px;">
+      <form
+        action="/register"
+        method="POST"
+        class="needs-validation"
+        autocomplete="off"
+        novalidate
+      >
         <!-- using fontawesome kit -->
-        <!-- <i class="fa-solid fa-user fa-8x"></i> -->
+        <i class="fa-solid fa-user fa-8x"></i>
         <p></p>
 
         <h1 class="h3 mb-3 fw-bold">แบบลงทะเบียน</h1>
@@ -42,18 +48,16 @@
             <input
               type="text"
               name="username"
-              class="form-control top w-50"
+              class="form-control top"
               id="usernamefloatingInput"
               placeholder="Username"
-              style="text-align: center;"
+              aria-describedby="button-addon2"
               value="<%=userNum%>"
-              
-              required 
+              required
               autofocus
               readonly
             />
             <label for="usernamefloatingInput">Username</label>
-            
           </div>
         </div>
 
@@ -61,7 +65,7 @@
           <input
             type="text"
             name="fullName"
-            class="form-control top"
+            class="form-control middle"
             id="fullNamefloatingInput"
             placeholder="Full Name"
             required
@@ -81,117 +85,60 @@
         </div>
 
         <div class="row g-0">
-
           <div class="col-6">
-
             <div class="form-floating">
-              <input
-                type="text"
+              <select
                 name="city"
-                class="form-control middle"
+                class="form-select middle"
                 id="cityfloatingSelectGrid"
                 placeholder="City"
-                list="list-city"
                 required
-              />
+              ></select>
               <label for="cityfloatingSelectGrid">จังหวัด</label>
-              <datalist id="list-city">
-                <%var city=[]%>
-                <%province.forEach((element)=>{%>
-                  <%city.push(element.ProvinceThai)%>
-                <%})%>
-                <%let uniqueCity = [...new Set(city)];%>
-                <%uniqueCity.forEach((element)=>{%>
-                  <option><%=element%></option>
-                <%})%>
-              </datalist>
             </div>
           </div>
 
-        <div class="col-6">
-          <div class="form-floating">
-            <input
-              type="text"
-              name="district"
-              class="form-control middle"
-              id="districtfloatingSelectGrid"
-              placeholder="District"
-              list="list-district"
-              required
-            />
-            <label for="districtfloatingSelectGrid">อำเภอ</label>
-            <datalist id="list-district">
-              <%var districtlist=[]%>
-              <%district.forEach((element)=>{%>
-                <%districtlist.push(element.DistrictThaiShort)%>
-              <%})%>
-              <%let uniqueDistrict = [...new Set(districtlist)];%>
-              <%uniqueDistrict.forEach((element)=>{%>
-                <option><%=element%></option>
-              <%})%>
-              
-            </datalist>
+          <div class="col-6">
+            <div class="form-floating">
+              <select
+                name="district"
+                class="form-select middle"
+                id="districtfloatingSelectGrid"
+                placeholder="District"
+                required
+              ></select>
+              <label for="districtfloatingSelectGrid">อำเภอ</label>
+            </div>
           </div>
         </div>
-
-
-
 
         <div class="row g-0">
-
           <div class="col-6">
-            
             <div class="form-floating">
-              <input
-                type="text"
+              <select
                 name="subdistrict"
-                class="form-control bottom"
+                class="form-select bottom"
                 id="subdistrictfloatingSelectGrid"
                 placeholder="Subdistrict"
-                list="list-subdistrict"
                 required
-              />
+              ></select>
               <label for="subdistrictfloatingSelectGrid">ตำบล</label>
-              <datalist id="list-subdistrict">
-                <%tambon.forEach((element)=>{%>
-                  <option><%=element.TambonThaiShort%></option>
-                <%})%>
-              </datalist>
             </div>
           </div>
 
-            
-
-
           <div class="col-6">
-
             <div class="form-floating">
-              <input
-                type="text"
+              <select
                 name="postCode"
-                class="form-control bottom"
+                class="form-select bottom"
                 id="postCodefloatingSelectGrid"
                 placeholder="Post Code"
-                list="list-postcode"
                 required
-              />
+              ></select>
               <label for="postCodefloatingSelectGrid">รหัสไปรษณีย์</label>
-              <datalist id="list-postcode">
-
-                <%var postcodelist=[]%>
-                <%postcode.forEach((element)=>{%>
-                  <%postcodelist.push(element.PostCodeMain)%>
-                <%})%>
-                <%let uniquepPostcode = [...new Set(postcodelist)];%>
-                <%uniquepPostcode.forEach((element)=>{%>
-                  <option><%=element%></option>
-                <%})%>
-
-              </datalist>
             </div>
           </div>
         </div>
-          
 
         <p></p>
         <div class="form-floating">
@@ -207,9 +154,7 @@
             required
           />
           <label for="citizen">เลขบัตรประชาชน</label>
-          <div class="invalid-tooltip">
-            เลขบัตรประชาชนผิดพลาด.
-          </div>
+          <div class="invalid-tooltip">เลขบัตรประชาชนผิดพลาด.</div>
         </div>
 
         <div class="form-floating">
@@ -225,9 +170,7 @@
             required
           />
           <label for="phoneNumber">เบอร์โทร</label>
-          <div class="invalid-tooltip">
-            เบอร์โทรผิดพลาด.
-          </div>
+          <div class="invalid-tooltip">เบอร์โทรผิดพลาด.</div>
         </div>
         <p></p>
 
@@ -253,9 +196,7 @@
             required
           />
           <label for="bookBankNumber">เลขบัญชีธนาคาร</label>
-          <div class="invalid-tooltip">
-            เลขบัญชีธนาคารผิดพลาด.
-          </div>
+          <div class="invalid-tooltip">เลขบัญชีธนาคารผิดพลาด.</div>
         </div>
         <div class="form-floating">
           <input
@@ -294,48 +235,114 @@
             required
           />
           <label for="passwordCheck">ยืนยันรหัสผ่าน</label>
-          <div class="invalid-tooltip">
-            รหัสผ่านไม่ตรง.
-          </div>
+          <div class="invalid-tooltip">รหัสผ่านไม่ตรง.</div>
         </div>
         <p></p>
         <div class="form-floating">
           <input
             type="text"
             name="sponsor"
-            class=" form-control"
+            class="form-control"
             id="floatingInput"
             placeholder="Sponsor"
             value="<%=sponsor%>"
             <%if(sponsor){%>
-            readonly 
-            <%}%> 
+              readonly 
+            <%}%>
             />
           <label for="floatingInput">Sponsor</label>
         </div>
         <p></p>
 
         <button class="w-100 btn btn-lg btn-primary" type="submit">
-          ลงทะเบียน
+          Register
         </button>
         <p class="mt-5 mb-3 text-body-secondary">
-          มีบัญชีอยู่แล้ว? <a href="/login">เข้าสู่ระบบ!</a>
+          Already Have An Account? <a href="/login">Sign In!</a>
         </p>
       </form>
     </main>
   </body>
 
+  <!-- Favicons -->
+  <script
+    src="https://kit.fontawesome.com/147e879dd5.js"
+    crossorigin="anonymous"
+  ></script>
 
-    <!-- Favicons -->
-    <script
-      src="https://kit.fontawesome.com/147e879dd5.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.3/js/bootstrap-select.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/xcash/bootstrap-autocomplete@v2.3.7/dist/latest/bootstrap-autocomplete.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-    <script src="/js/auth_script.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
+    crossorigin="anonymous"
+  ></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.6.3/js/bootstrap-select.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/xcash/bootstrap-autocomplete@v2.3.7/dist/latest/bootstrap-autocomplete.min.js"></script>
+
+
+  <script>
+    $(()=> {
+      const thailand = <%-JSON.stringify(thailand)%>;
+      const city=[]
+      const district=[]
+      thailand.forEach((element)=>{
+        city.push(element.ProvinceThai)
+        district.push(element.DistrictThaiShort)
+      })
+      const uniqueCity = [...new Set(city)];
+      const uniqueDistrict = [...new Set(district)];
+
+      uniqueCity.forEach((element)=>{
+        $('#cityfloatingSelectGrid').append('<option value='+element+'> '+element+'</option>')
+      })
+
+      
+
+      uniqueCity.forEach((province)=>{
+      $('#districtfloatingSelectGrid').append('<optgroup label='+province+' id='+province+'></optgroup>')
+        const district=[]
+        thailand.forEach((element)=>{
+          if(element.ProvinceThai==province){
+            district.push(element.DistrictThaiShort)
+          }
+        })
+        const sortDistrict = [...new Set(district)];
+        sortDistrict.forEach((element)=>{
+          $('#districtfloatingSelectGrid optgroup[id="'+province+'"]').append('<option value='+element+'>'+element+'</option>')
+        })
+      })
+
+      uniqueDistrict.forEach((district)=>{
+      $('#subdistrictfloatingSelectGrid').append('<optgroup label='+district+' id='+district+'></optgroup>')
+        thailand.forEach((element)=>{
+          if(element.DistrictThaiShort==district){
+            $('#subdistrictfloatingSelectGrid optgroup[id="'+district+'"]').append('<option value='+element.TambonThaiShort+'>'+element.TambonThaiShort+'</option>')
+          }
+        })
+      })
+
+      uniqueCity.forEach((province)=>{
+      $('#postCodefloatingSelectGrid').append('<optgroup label='+province+' id='+province+'></optgroup>')
+        const postlist=[]
+        thailand.forEach((element)=>{
+          if(element.ProvinceThai==province){
+            postlist.push(element.PostCodeMain)
+          }
+        })
+        const sortPostcode = [...new Set(postlist)];
+        sortPostcode.forEach((element)=>{
+          $('#postCodefloatingSelectGrid optgroup[id="'+province+'"]').append('<option value='+element+'>'+element+'</option>')
+        })
+      })
+      
+    })
+  </script>
+
+<script src="/js/auth_script.js"></script>
 </html>
