fix frontend a bit

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -111,12 +111,15 @@
     <link href="/css/auth_style.css" rel="stylesheet" />
   </head>
   <body class="text-center">
-    <main class="form-signin w-50 m-auto">
+    <main class="form-signin w-100 m-auto">
       <!-- send POST request -->
       <form action="/login" method="POST">
-        <!-- using fontawesome kit -->
-        <img src="/images/logo1.png" style="margin-left: 50px; height: auto; width: 250px;">
-        <!-- <i class="fa-solid fa-user fa-8x"></i> -->
+        <div class="row">
+          <div clsas="col">
+            <img src="/images/logo1.png" class="img-fluid" style="margin-left: 50px; height: auto; width: 250px;">
+          </div>
+        </div>
+        
         <p></p>
 
         <h1 class="h3 mb-3 fw-bold">เข้าสู่ระบบ</h1>
