--- a/views/register.ejs
+++ b/views/register.ejs
@@ -37,8 +37,11 @@
         autocomplete="off"
         novalidate
       >
-        <!-- using fontawesome kit -->
-        <i class="fa-solid fa-user fa-8x"></i>
+      <div class="row">
+        <div clsas="col">
+          <img src="/images/logo1.png" class="img-fluid" style="margin-left: 50px; height: auto; width: 250px;">
+        </div>
+      </div>
         <p></p>
 
         <h1 class="h3 mb-3 fw-bold">แบบลงทะเบียน</h1>
