--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,7 @@
 
 </body>
-<footer class="navbar-default navbar-fixed-bottom">
-    <div class="footer-bottom" id="bsr-page-footer">
-        
+<footer>
+  <div id="bsr-page-footer">        
       <div class="row">
           <!-- brand bar -->
           <div class="col-xs-6 text-left">
@@ -35,7 +34,7 @@
             </ul>
           </div>
         </div>
-      </div>
+      </>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
