--- a/views/register.ejs
+++ b/views/register.ejs
@@ -177,12 +177,48 @@
           <div class="invalid-tooltip">เบอร์โทรผิดพลาด.</div>
         </div>
         <p></p>
+        <p></p>
+          <div class="form-floating">
+            <select
+              name="bank"
+              class="form-select top"
+              id="bankfloatingSelectGrid"
+              placeholder="Bank"
+              required
+            >
+              <option value="ธนาคารกรุงเทพ">ธนาคารกรุงเทพ</option>
+              <option value="ธนาคารกรุงไทย">ธนาคารกรุงไทย</option>
+              <option value="ธนาคารกรุงศรีอยุธยา">ธนาคารกรุงศรีอยุธยา</option>
+              <option value="ธนาคารกสิกรไทย">ธนาคารกสิกรไทย</option>
+              <option value="ธนาคารทหารไทยธนชาต">ธนาคารทหารไทยธนชาต</option>
+              <option value="ธนาคารซีไอเอ็มบี">ธนาคารซีไอเอ็มบี</option>
+              <option value="ธนาคารไทยพาณิชย์">ธนาคารไทยพาณิชย์</option>
+              <option value="ธนาคารสแตนดาร์ดชาร์เตอร์ด">ธนาคารสแตนดาร์ดชาร์เตอร์ด</option>
+              <option value="ธนาคารยูโอบี">ธนาคารยูโอบี</option>
+              <option value="ธนาคารทิสโก้">ธนาคารทิสโก้</option>
+              <option value="ธนาคารเกียรตินาคินภัทร">ธนาคารเกียรตินาคินภัทร</option>
+              <option value="ธนาคารแลนด์ แอนด์ เฮ้าส์
+              ">ธนาคารแลนด์ แอนด์ เฮ้าส์
+            </option>
+              <option value="ธนาคารไอซีบีซี">ธนาคารไอซีบีซี</option>
+              <option value="ธนาคารไทยเครดิต">ธนาคารไทยเครดิต</option>
+              <option value="ธนาคารเมกะ สากลพาณิชย์
+              ">ธนาคารเมกะ สากลพาณิชย์
+            </option>
+              <option value="ธนาคารแห่งประเทศจีน">ธนาคารแห่งประเทศจีน</option>
+              <option value="ธนาคารซูมิโตโมมิตซุยทรัสต์">ธนาคารซูมิโตโมมิตซุยทรัสต์</option>
+
+            </select>
+            <label for="bankfloatingSelectGrid">ธนาคาร</label>
+          </div>
+        </div>
+      
 
         <div class="form-floating">
           <input
             type="text"
             name="bookBank"
-            class="form-control top"
+            class="form-control middle"
             id="bookBank"
             placeholder="Book Bank Name"
             required
